Fixed profile image alignement and blog post alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -180,22 +180,11 @@ a.entrylink:hover {
 /* home */
 
 .profile {
-	float: right;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	margin-right: -10px;
-	margin-left: 30px;
-	width: 27%;
-}
-
-@media (max-width: 550px) {
-	.profile {
-		width: 50%;
-	}
-}
-
-#introtext {
-	padding-bottom: 200px;
+	width: 70%;
+	max-width: 300px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* blog */
